[tool.poetry]
name = "dr-scc"
version = "0.1.0"
description = "Depression Readout Project Repository"
authors = ["Vineet Tiruvadi <vineet.tiruvadi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.15"
numpy = "^1.24.0"
dbspace = { path = "/home/vscode/dbspace", develop = true }


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.19.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
