[tool.poetry]
name = "dr-scc"
version = "0.1.0"
description = ""
authors = ["Vineet Tiruvadi <virati@gmail.com>"]
readme = "README.md"
packages = [{include = "dr_scc"}]

[tool.poetry.dependencies]
python = "^3.8"
dbspace = "^0.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
