[tool.poetry]
name = "dr-scc"
version = "0.1.0"
description = ""
authors = ["Vineet Tiruvadi <virati@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.17"
dbspace = {path = "/dbspace"}


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
